--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -25,13 +25,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rdz-Ga-H4b">
-                                <rect key="frame" x="0.0" y="774" width="393" height="44"/>
+                                <rect key="frame" x="-2" y="773" width="395" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="hDY-of-pul"/>
                                 </constraints>
                                 <items>
                                     <barButtonItem title="About" id="k55-qA-1uP"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="BbV-Cn-jKQ"/>
+                                    <barButtonItem style="plain" id="cGV-aO-ISK">
+                                        <pageControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="REN-Oc-F7a">
+                                            <rect key="frame" x="140" y="9" width="116" height="26"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="pageIndicatorTintColor" systemColor="systemTealColor"/>
+                                            <color key="currentPageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="pageControlTapped:" destination="ZKT-dM-P7X" eventType="valueChanged" id="HGl-Wf-mq2"/>
+                                            </connections>
+                                        </pageControl>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="DAK-n4-1U1"/>
                                     <barButtonItem title="Item" image="list.bullet" catalog="system" id="1bp-zR-oJg">
                                         <connections>
                                             <segue destination="BYZ-38-t0r" kind="presentation" modalPresentationStyle="fullScreen" id="0hd-yA-eZg"/>
@@ -40,16 +52,16 @@
                                 </items>
                             </toolbar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y0r-aa-t96">
-                                <rect key="frame" x="0.0" y="59" width="393" height="250"/>
+                                <rect key="frame" x="-1" y="58" width="395" height="250"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="晴天, 2月16日, 2023" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6Z-yY-OvO">
-                                        <rect key="frame" x="165" y="11" width="220" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="晴天, 2月16日, 8:20AM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6Z-yY-OvO">
+                                        <rect key="frame" x="167" y="11" width="220" height="20"/>
                                         <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="台北" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4g-U6-nv5">
-                                        <rect key="frame" x="165" y="39" width="220" height="23"/>
+                                        <rect key="frame" x="167" y="39" width="220" height="23"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="23" id="gv0-d6-JYU"/>
                                         </constraints>
@@ -58,12 +70,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sun.max.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8Ye-Yx-9UB">
-                                        <rect key="frame" x="10" y="8" width="161" height="234"/>
+                                        <rect key="frame" x="10" y="8" width="163" height="234"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                         <color key="tintColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="26°" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bU4-yW-Sxo">
-                                        <rect key="frame" x="165" y="67" width="220" height="140"/>
+                                        <rect key="frame" x="167" y="67" width="220" height="140"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="140" id="nAs-yl-Tg7"/>
                                         </constraints>
@@ -72,7 +84,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gox-PF-2eO">
-                                        <rect key="frame" x="165" y="190" width="220" height="65"/>
+                                        <rect key="frame" x="167" y="190" width="220" height="65"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="65" id="azi-sz-zk1"/>
                                             <constraint firstAttribute="width" constant="220" id="wBL-uH-SZJ"/>
@@ -100,23 +112,84 @@
                                     <constraint firstItem="Gox-PF-2eO" firstAttribute="leading" secondItem="e4g-U6-nv5" secondAttribute="leading" id="yIE-K0-9ge"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="YIe-ct-dUq">
+                                <rect key="frame" x="-1" y="307" width="395" height="467"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="80" id="EB1-UY-r1n" customClass="FiveDaysTableViewCell" customModule="WeatherApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="395" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="EB1-UY-r1n" id="l6k-tC-1EA">
+                                            <rect key="frame" x="0.0" y="0.0" width="395" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sun.max.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="E10-CB-4wh">
+                                                    <rect key="frame" x="20" y="5" width="70" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="晴天" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7o-el-5YB">
+                                                    <rect key="frame" x="98" y="5" width="194" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="26º" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZL4-tL-LS1">
+                                                    <rect key="frame" x="292" y="5" width="83" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" editable="NO" text="豔陽高照大晴天注意防曬" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3n-Qb-HFa">
+                                                    <rect key="frame" x="98" y="34" width="194" height="46"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="textColor" systemColor="labelColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="18º" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6KX-gg-gjK">
+                                                    <rect key="frame" x="292" y="41" width="83" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dayImageView" destination="E10-CB-4wh" id="XOS-id-Hwb"/>
+                                            <outlet property="daysHightTempLable" destination="ZL4-tL-LS1" id="esW-sR-hrh"/>
+                                            <outlet property="daysLable" destination="X7o-el-5YB" id="ARE-0t-ocm"/>
+                                            <outlet property="daysLowTempLable" destination="6KX-gg-gjK" id="HBr-F9-uam"/>
+                                            <outlet property="daysSummaryTextVIew" destination="Q3n-Qb-HFa" id="RPP-NM-ELa"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VIZ-FZ-b57"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="leading" secondItem="y0r-aa-t96" secondAttribute="leading" id="6z4-YH-fLA"/>
-                            <constraint firstItem="y0r-aa-t96" firstAttribute="top" secondItem="VIZ-FZ-b57" secondAttribute="top" id="Uwo-QI-C2Z"/>
-                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="bottom" secondItem="VIZ-FZ-b57" secondAttribute="bottom" id="VKu-lf-bbn"/>
-                            <constraint firstItem="VIZ-FZ-b57" firstAttribute="trailing" secondItem="y0r-aa-t96" secondAttribute="trailing" id="gco-Rs-RJ9"/>
-                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="trailing" secondItem="y0r-aa-t96" secondAttribute="trailing" id="iO3-2d-qtr"/>
-                            <constraint firstItem="y0r-aa-t96" firstAttribute="leading" secondItem="VIZ-FZ-b57" secondAttribute="leading" id="pJJ-gk-kQI"/>
+                            <constraint firstItem="YIe-ct-dUq" firstAttribute="top" secondItem="y0r-aa-t96" secondAttribute="bottom" constant="-1" id="4at-UR-CGo"/>
+                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="leading" secondItem="y0r-aa-t96" secondAttribute="leading" constant="-1" id="6z4-YH-fLA"/>
+                            <constraint firstItem="y0r-aa-t96" firstAttribute="top" secondItem="VIZ-FZ-b57" secondAttribute="top" constant="-1" id="Uwo-QI-C2Z"/>
+                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="bottom" secondItem="VIZ-FZ-b57" secondAttribute="bottom" constant="-1" id="VKu-lf-bbn"/>
+                            <constraint firstItem="VIZ-FZ-b57" firstAttribute="trailing" secondItem="YIe-ct-dUq" secondAttribute="trailing" constant="-1" id="Xn6-Gc-f0K"/>
+                            <constraint firstItem="VIZ-FZ-b57" firstAttribute="trailing" secondItem="y0r-aa-t96" secondAttribute="trailing" constant="-1" id="gco-Rs-RJ9"/>
+                            <constraint firstItem="YIe-ct-dUq" firstAttribute="leading" secondItem="VIZ-FZ-b57" secondAttribute="leading" constant="-1" id="hLQ-g9-pWY"/>
+                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="trailing" secondItem="y0r-aa-t96" secondAttribute="trailing" constant="-1" id="iO3-2d-qtr"/>
+                            <constraint firstItem="Rdz-Ga-H4b" firstAttribute="top" secondItem="YIe-ct-dUq" secondAttribute="bottom" constant="-1" id="n2D-EJ-XUW"/>
+                            <constraint firstItem="y0r-aa-t96" firstAttribute="leading" secondItem="VIZ-FZ-b57" secondAttribute="leading" constant="-1" id="pJJ-gk-kQI"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="dateLable" destination="c6Z-yY-OvO" id="YhN-T3-di3"/>
                         <outlet property="imageView" destination="8Ye-Yx-9UB" id="rXd-R3-ws8"/>
+                        <outlet property="pageControl" destination="REN-Oc-F7a" id="VPT-d3-a0U"/>
                         <outlet property="placeLable" destination="e4g-U6-nv5" id="Wh8-86-Wkg"/>
                         <outlet property="summaryLable" destination="Gox-PF-2eO" id="LlM-Jr-saC"/>
+                        <outlet property="tableView" destination="YIe-ct-dUq" id="zi2-TE-jGS"/>
                         <outlet property="temperatureLable" destination="bU4-yW-Sxo" id="0hk-BB-HmW"/>
                     </connections>
                 </viewController>
@@ -212,6 +285,9 @@
     <resources>
         <image name="list.bullet" catalog="system" width="128" height="87"/>
         <image name="sun.max.fill" catalog="system" width="128" height="125"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
